# solana-geyser-plugin-scaffold

./: Cargo.toml  README.md
src/: entrypoint.rs  geyser_plugin_hook.rs  lib.rs
