[package]
name = "solana-geyser-plugin-scaffold"
version = "1.11.1"
edition = "2021"
description = "The simplest Solana Geyser Plugin ever"
authors = ["mwrites <mwrites.pub@pm.me>"]
#repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-geyser-plugin-interface = { version = "=1.11.1" }
solana-logger = { version = "=1.11.1" }
log = "0.4.14"
bs58 = "0.4.0"